--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@ button, a, [role="button"] {
   const uploadBtn  = document.getElementById('uploadBlobBtn');
   const resultBox  = document.getElementById('uploadResult');
   const urlLink    = document.getElementById('uploadUrlLink');
-  const urlLabel   = document.getElementById('uploadUrlLabel');
+  const urlText    = document.getElementById('uploadUrlText');
   const copyBtn    = document.getElementById('copyUploadUrlBtn');
 
   // 閉じる
