--- a/index.html
+++ b/index.html
@@ -128,28 +128,37 @@ button, a, [role="button"] {
   .item-pill.no-img{justify-content:center;padding:.25rem .8rem}
 
   /* All modals */
-  .modal {/* iOS/Android のノッチやホームバー分を確保 */
-    padding-left:  max(20px, env(safe-area-inset-left));
-    padding-right: max(20px, env(safe-area-inset-right));
-    padding-bottom: calc(20px + env(safe-area-inset-bottom));
+  .modal {
+    position:fixed;
+    inset:0;
+    display:none;
+    place-items:center;
+    background:rgba(0,0,0,.65);
+    padding:20px;
+    z-index:50;
   }
   .modal.show{display:grid}
-  /* ダイアログ幅を安全領域内に収める（96vwより優先） */
+
   .dialog {
-    /* 画面幅 － 左右 safe-area － 余白 */
-    max-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right) - 24px);
-    margin-left: auto;
-    margin-right: auto;
+    width:min(880px,96vw);
+    max-width:calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right) - 24px);
+    margin:0 auto;
+    background:var(--panel);
+    border:1px solid var(--border);
+    border-radius:16px;
+    padding:16px;
+    box-shadow:var(--shadow);
   }
   .dialog h3{margin:0 0 .5rem}
-  .dialog .grid-2{display:grid;gap:12px;grid-template-columns:1fr}@media(min-width:860px){.dialog .grid-2{grid-template-columns:1fr 1fr}}
-  /* standalone（ホーム画面からの起動）かつモバイル相当のとき強制適用 */
-  @media (display-mode: standalone) and (hover: none) and (pointer: coarse) {
-    .dialog {
-      /* 念のため 100% も上限に入れておく */
-      width: min(880px, 100%);
-    }
+  .dialog .grid-2{
+    display:grid;
+    gap:12px;
+    grid-template-columns:1fr
   }
+  @media(min-width:860px){
+    .dialog .grid-2{grid-template-columns:1fr 1fr}
+  }
+
 
   /* Start splash */
   .splash{display:grid;place-items:center;min-height:60vh}
