--- a/index.html
+++ b/index.html
@@ -128,37 +128,11 @@ button, a, [role="button"] {
   .item-pill.no-img{justify-content:center;padding:.25rem .8rem}
 
   /* All modals */
-  .modal {
-    position:fixed;
-    inset:0;
-    display:none;
-    place-items:center;
-    background:rgba(0,0,0,.65);
-    padding:20px;
-    z-index:50;
-  }
+  .modal{position:fixed;inset:0;display:none;place-items:center;background:rgba(0,0,0,.65);padding:20px;z-index:50}
   .modal.show{display:grid}
-
-  .dialog {
-    width:min(880px,96vw);
-    max-width:calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right) - 24px);
-    margin:0 auto;
-    background:var(--panel);
-    border:1px solid var(--border);
-    border-radius:16px;
-    padding:16px;
-    box-shadow:var(--shadow);
-  }
+  .dialog{width:min(880px,96vw);background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:16px;box-shadow:var(--shadow)}
   .dialog h3{margin:0 0 .5rem}
-  .dialog .grid-2{
-    display:grid;
-    gap:12px;
-    grid-template-columns:1fr
-  }
-  @media(min-width:860px){
-    .dialog .grid-2{grid-template-columns:1fr 1fr}
-  }
-
+  .dialog .grid-2{display:grid;gap:12px;grid-template-columns:1fr}@media(min-width:860px){.dialog .grid-2{grid-template-columns:1fr 1fr}}
 
   /* Start splash */
   .splash{display:grid;place-items:center;min-height:60vh}
